feat: add models for research topics, members, projects, and theses with admin registration

--- a/damlalab/templates/partials/_base.html
+++ b/damlalab/templates/partials/_base.html
@@ -152,8 +152,8 @@
           &copy; 2023 DamlaLab. All rights reserved.
         </div>
         <div class="flex space-x-4">
-          <a href="#" class="hover:text-white">Privacy Policy</a>
-          <a href="#" class="hover:text-white">Terms of Service</a>
+          <!-- <a href="#" class="hover:text-white">Privacy Policy</a>
+          <a href="#" class="hover:text-white">Terms of Service</a> -->
         </div>
       </div>
     </div>
