--- a/damlalab/templates/theses.html
+++ b/damlalab/templates/theses.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <!-- Hero Section -->
-<header class="bg-gradient-to-r from-indigo-500 to-blue-600 text-white py-16">
+<header class="bg-gradient-to-r from-white-500 to-blue-600 text-black py-16">
   <div class="max-w-4xl mx-auto px-4 text-center">
     <h1 class="text-5xl font-bold mb-4">Theses</h1>
     <p class="text-xl">Ongoing and Completed Theses at DAMLA Lab</p>
